Negotiation service and changes in request service

--- a/templates/student.html
+++ b/templates/student.html
@@ -17,6 +17,7 @@
 <body>
    
       <form action = "http://localhost:5000/result" method = "POST">
+         <p>Company Name: <input type = "text" name = "Company_name" />
       	<h1> Cargo Description </h1>
          <!--
          Drop down menu for container type. 
